<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">My Pet</string>
    <string name="action_settings">Nastavitve</string>
    <string name="B_myPets">Moji ljubljenčki</string>
    <string name="B_Settings">Nastavitve</string>
    <string name="B_About">O aplikaciji</string>
    <string name="copyright"><![CDATA[Vse pravice pridržane. T & V 2014 – 2015]]></string>
    <string name="title_activity_about">O aplikaciji</string>
    <string name="About">Aplikacijo My Pet sva razvila Tomaž Gorenc in Vesna Horvat. Aplikacija je namenjena uporabnikom s hišnimi ljubljenčki za hranjenje osnovnih podatkov in opozoril.</string>
    <string name="title_activity_all_pets">Moji ljubljenčki</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="title_activity_add_pet">Dodaj novega</string>
    <string name="title_activity_view_pet">O ljubljenčku</string>
    <string name="title_activity_add_reminder">Dodaj opomnik</string>
    <string name="title_activity_my_pet" translatable="false">My Pet</string>
    <string name="confirmTitle">Ste prepričani?</string>
    <string name="confirmMessage">To bo dokončno zbrisalo ljubljenčka</string>
    <string name="button_delete">Zbriši</string>
    <string name="button_cancel">Prekliči</string>
    <string name="Shrani">Shrani</string>
    <string name="name">Ime:</string>
    <string name="vrsta">Vrsta:</string>
    <string name="rojDan">Rojstni dan:</string>
    <string name="velikost">Velikost:</string>
    <string name="teza">Teža:</string>
    <string name="cip">Številka čipa:</string>
    <string name="stevilka">Št. vet.:</string>
    <string name="drugo">Drugo:</string>
    <string name="errorTitle">Ime je obvezno</string>
    <string name="errorMessage">Vnesite ime</string>
    <string name="errorButton">V redu</string>
    <string name="settings_language">Jezik</string>
    <string name="settings_theme">Tema</string>
    <string name="settings_sound">Zvok</string>
    <string name="naslov">Naslov:</string>
    <string name="datum">Datum:</string>
    <string name="ura">Ura:</string>
    <string name="opombe">Opombe:</string>
    <string name="viewPetTitle">Kaj želite storiti?</string>
    <string name="message1">"Želite opomnik urediti ali zbrisati? "</string>
    <string name="message2">"Želite ljubljenčka urediti, zbrisati ali pogledati opomnike? "</string>
    <string name="zbrisi">Zbriši</string>
    <string name="uredi">Uredi</string>
    <string name="preklici">Prekliči</string>
    <string name="potrdi">Potrdi</string>
    <string name="deleteMessage">Izbran opomnik se bo zbrisal.</string>
    <string name="deleteMessage2">Izbran ljubljenček se bo zbrisal.</string>
    <string name="deleteReminder">Brisanje opomnika</string>
    <string name="deleteReminder2">Brisanje ljubljenčka</string>
    <string name="opomniki">Opomniki</string>
    <string name="sloeng" translatable="false">SLO/ENG</string>
    <string name="sound" translatable="false">OFF/ON</string>
    <string name="tema">Svetla/Temna</string>

</resources>
