<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".myPet">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/B_myPets"
        style="@style/ButtonStyle"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="showAllPets"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/B_Settings"
        style="@style/ButtonStyle"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:onClick="showSettings"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/B_About"
        style="@style/ButtonStyle"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:onClick="showAbout" />
</LinearLayout>