<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pet.emp.fri.mypet.addPet">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        style="@style/TextStyleAddingFirst"
        android:id="@+id/tv1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/vrsta"
        style="@style/TextStyleAdding"
        android:id="@+id/tv2"
        android:layout_below="@+id/tv1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="34dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rojDan"
        style="@style/TextStyleAdding"
        android:id="@+id/tv3"
        android:layout_below="@+id/tv2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="34dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/velikost"
        style="@style/TextStyleAdding"
        android:id="@+id/tv4"
        android:layout_below="@+id/tv3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="34dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/teza"
        style="@style/TextStyleAdding"
        android:id="@+id/tv5"
        android:layout_below="@+id/tv4"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="34dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cip"
        style="@style/TextStyleAdding"
        android:id="@+id/tv6"
        android:layout_below="@+id/tv5"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="34dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stevilka"
        style="@style/TextStyleAdding"
        android:id="@+id/tv7"
        android:layout_below="@+id/tv6"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="34dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/drugo"
        style="@style/TextStyleAdding"
        android:id="@+id/tv8"
        android:layout_below="@+id/tv7"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="34dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ime"
        android:layout_alignBottom="@+id/tv1"
        android:layout_alignStart="@+id/rojDan" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vrsta"
        android:layout_above="@+id/tv3"
        android:layout_toRightOf="@+id/tv7"
        android:layout_alignRight="@+id/ime"
        android:layout_alignEnd="@+id/ime" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/rojDan"
        android:layout_above="@+id/tv4"
        android:layout_toEndOf="@+id/tv7"
        android:layout_toRightOf="@+id/tv7"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/velikost"
        android:layout_above="@+id/tv5"
        android:layout_toEndOf="@+id/tv7"
        android:layout_toRightOf="@+id/tv7"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/teza"
        android:layout_above="@+id/tv6"
        android:layout_toEndOf="@+id/tv7"
        android:layout_toRightOf="@+id/tv7"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/cip"
        android:layout_above="@+id/tv7"
        android:layout_toEndOf="@+id/tv7"
        android:layout_toRightOf="@+id/tv7"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/stevilka"
        android:layout_above="@+id/tv8"
        android:layout_toEndOf="@+id/tv7"
        android:layout_toRightOf="@+id/tv7"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/drugo"
        android:layout_alignBottom="@+id/tv8"
        android:layout_toRightOf="@+id/tv7"
        android:layout_alignRight="@+id/stevilka"
        android:layout_alignEnd="@+id/stevilka" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Shrani"
        android:id="@+id/AddPetSave"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>